# prime_nikhila_anand

./: .readthedocs.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/prime_na2918/: __init__.py  prime_na2918.py
tests/: test_prime_na2918.py
