[tool.poetry]
name = "prime_na2918"
version = "0.1.0"
description = "A sample package created with Cookiecutter for MDS HW07, focused on determining if a number is prime or not"
authors = ["Nikhila Anand"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
