[tool.poetry]
name = "prime_na2918"
version = "0.1.0"
description = "A sample package created with Cookiecutter for MDS HW07, focused on determining if a number is prime or not"
authors = ["Nikhila Anand"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = "1.0.0rc0"
sphinx-rtd-theme = "^1.3.0"
sphinx-autoapi = "^3.0.0"
sphinx = "7.2.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
